--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "learning bootstrap with saas",
   "main": "index.js",
   "scripts": {
-    "compile:saas":"saas scss:assets/css"
+    "compile:sass":"sass --watch scss:assets/css"
   },
   "keywords": [
     "Bootstrap",
